--- a/store/src/components/NotFound.module.css
+++ b/store/src/components/NotFound.module.css
@@ -15,13 +15,18 @@
 }
 .NotFoundVector {
     height: 35rem;
-    padding: 0 0 3rem 0;
+    margin: 1rem 0 3rem 0;
+    border-radius: 0.5rem;
 }
-.NotFoundTitle {
+.NotFoundTitle , .NotFoundTitleDark{
     font-size: 30px;
     font-family: Iryekan;
     text-align: center;
     padding: 0 2rem;
+}
+
+.NotFoundTitleDark {
+    color: var(--mainBlue);
 }
 .NotFoundButton {
     display: flex;
